$Id: History,v 1.4 2000-11-24 11:31:27 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    TestEm5 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

25th November 2000 Steve O'Neale (tagset210)
- update test outputs for min.delta energy cut and cut table
- Change in processes below ~ 1 per cent.

June 17, 2000  John Allison  (testem5-V01-00-00)
- Updated TestEm5.out for geant4-01-01-ref-06.
     
17-01-00 cppflag G4NOHIST to protect hbook histograms.
         new histo: normalizsed distribution of energy deposit.
	 new materials (mainly gas)
     
12-10-99 moved to examples/extended/electromagnetic/TestEm5

09-08-99 commands for save/read Rndm status
     
07-07-99 Michel Maire
- (re)introduce visualisation.
- TestEm5 looks like TestEm1 and TestEm3

April 09, 98 G. Cosmo
- Created.