@@ -1,4 +1,4 @@
-$Id: History,v 1.4 2000-11-24 11:31:27 stesting Exp $
+$Id: History,v 1.5 2000-12-07 13:32:34 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,7 +14,14 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
-
+     
+07-12-00  mma (testem5-V02-00-03 & testem-noHist)
+          remove hbook histograms: GNUmakefile,runAction
+				   
+06-12-00  mma (testem5-V02-00-02 & testem-withHist)
+          update of init.mac for new vis commands.
+	  G4UItcsh in the main()
+	  
 25th November 2000 Steve O'Neale (tagset210)
 - update test outputs for min.delta energy cut and cut table
 - Change in processes below ~ 1 per cent.
